tests/ui/type-qpath-eof4.stderr
error: no rules expected the token `F`
 --> $DIR/type-qpath-eof4.rs:6:22
  |
6 |     input = [{ <T as F }]
  |                      ^

error: aborting due to previous error

